--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-   
-
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "5.0.0-alpha.106",
     "@mui/material": "^5.10.12",
@@ -18,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.23.1",
     "chance": "^1.1.9",
+    "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
@@ -44,7 +43,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "sass": "^1.63.4"
   },
   "scripts": {
     "start": "react-scripts start",
