--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.1",
     "apexcharts": "^3.23.1",
     "chance": "^1.1.9",
     "jquery": "^3.7.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
