--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router": "^6.3.0",
