--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-countup": "^6.4.2",
