--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.6.1",
     "apexcharts": "^3.23.1",
     "chance": "^1.1.9",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -26,6 +27,7 @@
     "react-apexcharts": "^1.3.7",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-file-download": "^0.3.5",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router": "^6.3.0",
